add status to dto, update c3_diagram, change results announcer module, fix tests, refactor